plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'com.dervarex.minified.worlds'
description = "Utility for Reading and Modifying Minecraft Worlds"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    withSourcesJar()
    withJavadocJar()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'

    implementation 'org.apiguardian:apiguardian-api:1.1.2'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs '--add-modules', 'jdk.httpserver'
}
